--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio - Estudiante de Ingeniería Informática</title>
+    <title>Rodrigo Gonzalez - Estudiante de Ingeniería Informática</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -20,7 +20,7 @@
             padding: 5em 0;
         }
         .header-content {
-            background-color: rgba(0, 0, 0, 0.6); /* Fondo semitransparente para el recuadro */
+            background-color: rgba(0, 0, 0, 0.6);
             color: white;
             padding: 2em;
             display: inline-block;
@@ -77,7 +77,7 @@
 <body>
     <header>
         <div class="header-content">
-            <h1>Portafolio de Estudiante</h1>
+            <h1>Rodrigo Gonzalez Gago</h1>
             <p>Estudiante de Ingeniería Informática - Explorando el mundo de la tecnología y la programación.</p>
             <h1>Student Portfolio</h1>
             <p>Computer Engineering Student - Exploring the world of technology and programming.</p>
@@ -95,8 +95,8 @@
             <a href="https://github.com/RGongag" target="_blank">GitHub</a>
         </div>
         <div class="logos">
-            <img src="https://poliz.usal.es/politecnica/v1r00/web_rsc/logoUsal.png" alt="Logo Universidad de Salamanca">
-            <img src="https://i.ibb.co/zGg52Fx/Logo-epsz-removebg-preview.png" alt="Logo Escuela Politécnica Superior de Zamora">
+            <img src="https://poliz.usal.es/politecnica/v1r00/web_rsc/logoUsal.png" alt="Universidad de Salamanca">
+            <img src="https://i.ibb.co/zGg52Fx/Logo-epsz-removebg-preview.png" alt="EPSZ">
         </div>
         <p>📍 Location: Escuela Politecnica Superior de Zamora, Universidad de Salamanca, Zamora, España</p>
     </section>
